k8s/eks/product-service-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: product-service-namespace
  name: product-service-destination-rule
spec:
  # This is the name of the Service object attached to the Deployment object
  host: product-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL # enables mTLS
  subsets:
  - name: v1
    labels:
      version: v1
